c++: co_await and move-only type [PR105406]

Here we were building a temporary MoveOnlyAwaitable to hold the result of
evaluating 'o', but since 'o' is an lvalue we should build a reference
instead.

	PR c++/105406

gcc/cp/ChangeLog:

	* coroutines.cc (build_co_await): Handle lvalue 'o'.

gcc/testsuite/ChangeLog:

	* g++.dg/coroutines/co-await-moveonly1.C: New test.